# FlatVec-Viewer

./: .gitignore  CMakeLists.txt  README.md  camerawindow.cpp  camerawindow.h  main.cpp  mainwindow.cpp  mainwindow.h  projectwindow.cpp  projectwindow.h
camera/: camera.cpp  camera.h
datamanagement/: filemanager.cpp  filemanager.h  localdatamanager.cpp  localdatamanager.h  servermanager.cpp  servermanager.h
datamanagement/logic/: asm_interface.h  compress.asm  decode.asm  decompress.asm  encode.asm
geometry/action/: action.cpp  action.h
geometry/line/: boxline.cpp  boxline.h
geometry/rectangle/: curvedrectangle.cpp  curvedrectangle.h  invisiblerectangle.cpp  invisiblerectangle.h  ordinaryrectangle.cpp  ordinaryrectangle.h  rectangle.cpp  rectangle.h  slantedrectangle.cpp  slantedrectangle.h  temprectangle.cpp  temprectangle.h
geometrytype/: geometrytype.h
interface/: camerawindow.ui  mainwindow.ui  projectwindow.ui
layers/: areabox.cpp  areabox.h
rectangle/: curvedrectangle.h  invisiblerectangle.cpp  invisiblerectangle.h  ordinaryrectangle.cpp  ordinaryrectangle.h  rectangle.cpp  slantedrectangle.h
styles/: qrc.qrc  style.qss  stylemanager.cpp  stylemanager.h
tests/: CMakeLists.txt  test_curvedrectangle.cpp  test_ordinaryrectangle.cpp  test_slantedrectangle.cpp
widgets/: maingraphicsview.cpp  maingraphicsview.h  treecontroller.cpp  treecontroller.h
